--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- Maven (pom.xml) -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.33</version> <!-- Or a newer compatible version -->
+		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
