--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 spring.application.name=Banking-Application
-spring.datasource.url=jdbc:mysql://localhost:3306/Banking
-spring.datasource.username=root
-spring.datasource.password=R@vindar
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:h2:file:./Users/ravindarreddykakunuri/Desktop/Banking-Application/src/main/resources/bankingdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ravindarreddy4040@gmail.com
+spring.mail.password=ycfzqifhxlnegznw
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
